--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
 	<!--<style type="text/css">body{background-color:blue;}</style> pour tester le fichier css-->
 </head>
 <body>
+   <div id=imgGaucheGauche>
+     <div id=imgGauche> <!--img dans div de gauche avant header-->
+       <img src="sound.png" alt="resonnance hp" >
+       <img src="sound.png" alt="resonnance hp" ><!-- deuxieme baffle pour la gauche  sans effet secondaire-->
+     </div>  
+     <div id=imgDroit> <!--deuxieme img dans div de gauche avant header-->
+       <img src="sound.png" alt="resonnance hp" >
+     </div>
+   </div>  
+   <!------------------ attention deuxieme div avec image à faire passer à droite avec css-->
+   <div id=imgDroiteDroite>
+     <div id=imgGauche> <!--img dans div de droite avant header-->
+       <img src="sound.png" alt="resonnance hp" >
+     </div>  
+     <div id=imgDroit> <!--deuxieme img dans div de droite avant header-->
+       <img src="sound.png" alt="resonnance hp" >
+     </div>
+   </div>
    <section id="secGenerale"> 
     <header>
     	<figure>
